# mmg-wasm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  REVIEW.md  package.json  tsconfig.json
.github/workflows/: build.yml  pages.yml  size.yml
cmake/: EmscriptenConfig.cmake  FetchMMG.cmake
examples/: index.html  styles.css
examples/cube-remesh/: cube.js  index.html
examples/square-remesh/: index.html  square.js
scripts/: build.sh  check-size.sh  check-toolchain.sh  setup-emsdk.sh
src/: fs.ts  index.ts  memory.ts  mesh.ts  mmg-wasm.d.ts  mmg2d.c  mmg2d.ts  mmg3d.c  mmg3d.ts  mmgs.c  mmgs.ts  options.ts  result.ts  sizing.ts  stub.c
src/three/: index.ts
src/worker/: index.ts  remesh.worker.ts  types.ts
test/: benchmark.test.ts  io.test.ts  memory.test.ts  mesh.test.ts  metrics.test.ts  mmg2d.test.ts  mmg3d.test.ts  mmgs.test.ts  module.test.ts  options.test.ts  quality.test.ts  remesh.test.ts  three.test.ts  worker.test.ts
test/fixtures/: cube.ts  square.ts
web/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: ErrorBoundary.tsx
web/src/components/Controls/: FileControls.tsx  PaintPanel.tsx  ParameterPanel.tsx  SampleSelector.tsx  ViewControls.tsx  index.ts
web/src/components/Layout/: Header.tsx  PrivacyBanner.tsx  StatusBar.tsx  Tabs.tsx  index.ts
web/src/components/Stats/: MeshStats.tsx  MeshStatsOverlay.tsx  StatsComparison.tsx  index.ts
web/src/components/Viewer/: ColorBar.tsx  MeshViewer2D.tsx  MeshViewer3D.tsx  index.ts
web/src/fixtures/: defaultMeshes.ts
web/src/hooks/: useMmgWasm.ts
web/src/stores/: meshStore.ts  paintStore.ts
web/src/types/: mesh.ts  wasmModule.ts
web/src/utils/: colorMapping.ts  geometryBuilder.ts  meshQuality.ts  paintUtils.ts
